# adventofcode2022

./: pyproject.toml
advent/: day02.py  day06.py  day07.py
advent/day1/: test_main.py
advent/day2/: test_main.py
advent/day3/: test_main.py
advent/day4/: main.py  test_main.py
advent/day5/: main.py  test_main.py
advent/day6/: main.py  test_main.py
advent/day7/: main.py  test_main.py
advent/day8/: main.py  test_main.py
day1/: main.py  test_main.py
day2/: main.py  test_main.py
day3/: main.py  test_main.py
day4/: main.py  test_main.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
