[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = "advent of code 2022 solutions python!"
authors = ["Zac Dehkordi <zac.dehkordi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
